# Thesis

./: results
data_processing/: data.eps  hit_miss_non_uniform.ipynb  hit_miss_static.ipynb  hit_rates.eps  requests.eps  test.ipynb  time.eps  update_data.ipynb  vehicle_data.ipynb  vehicle_requests.ipynb  voxelization_time.ipynb
pcd_cache/: 50_misses.txt  hits.txt  hits_average.py  misses.txt  pcd_cache.py  pcd_cache_tile.py  pcd_is_updated.py  pcd_probability.py  pcd_validity.py  run_sequence.sh  time_to_voxelize.csv  time_to_voxelize.py  updated_data.csv  validity_with_size.csv  vehicle_coordinates_with_probability.csv  vehicle_pose.py
pcd_grid_size/: CMakeLists.txt  pcd_grid_size.cpp
pcd_merger/: CMakeLists.txt  pcd_merger.cpp
pcd_uncompress/: uncompress_pcd.py
quadtree/: gpt_qdtree.cpp  quadtree.cpp  temp.cpp
static_pcd_divider/install/: local_setup.sh  setup.sh
static_pcd_divider/log/: latest_build
static_pcd_divider/processing/: 16_validity_with_size.csv  32_validity_with_size.csv  4_validity_with_size.csv  64_validity_with_size.csv  8_validity_with_size.csv  get_grid_size.py  hits.txt  hits_32.txt  hits_4.txt  hits_64.txt  hits_8.txt  hits_average.py  misses.txt  misses_16.txt  misses_32.txt  misses_64.txt  misses_8.txt  modified_file.csv  pcd_cache_tile.py  pcd_is_updated.py  pcd_validity.py  (+7 more)
tile_client/: client.py
voxelization/: 16_time_to_voxelize.csv  32_time_to_voxelize.csv  4_time_to_voxelize.csv  64_time_to_voxelize.csv  8_time_to_voxelize.csv  time_to_voxelize.py  unoccupied_voxels.py  voxelization.py  voxelized_point_cloud.pcd
(+49 files in other folders)
